[metadata]
name = api_tests
version = 0.0.1
author = Totally Me
author_email = totally.me@email.com
description = Me learning flask and forgetting that create_app has to return the app... for half a day...
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.8
install_requires =
    Flask
    python-dotenv
    waitress

[options.packages.find]
where = src
